<?xml version="1.0" encoding="utf-8"?>


<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/about_parent_layout"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@android:color/background_light"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="16dp">

    <!--<ScrollView-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="match_parent">-->

    <!--<LinearLayout-->
    <!--android:layout_width="wrap_content"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:orientation="vertical">-->

    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/art_gallery_v1_0"
        android:textAlignment="center"
        android:textSize="18sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:text="@string/author_nikolai_berov"
        android:textSize="14sp"
        android:textStyle="italic" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:text="@string/about_the_project_this_is_the_final_project_in_it_talents_training_camp"
        android:textSize="14sp"
        android:textStyle="italic" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:text="@string/bulgaria_sofia"
        android:textSize="14sp"
        android:textStyle="italic" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"

        android:autoLink="email"
        android:text="@string/nikolai_berov_gmail_com"
        android:textAlignment="center"
        android:textSize="14sp" />

<LinearLayout
    android:layout_width="match_parent"
    android:gravity="center"
    android:layout_height="wrap_content">

    <pl.droidsonroids.gif.GifTextView
        android:id="@+id/banana"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/gif" />
</LinearLayout>



    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:text="@string/_2017"
        android:textAlignment="center"
        android:textSize="18sp" />


    <!--</LinearLayout>-->
    <!--</ScrollView>-->
</LinearLayout>
